--- a/home.html
+++ b/home.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Laravel Blog</title>
+    <title> Blog</title>
 
     <!-- Styles -->
     <!-- Latest compiled and minified CSS -->
