--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
                 </button>
 
                 <!-- Branding Image -->
-                <a class="navbar-brand" href="">
-                    Laravel Blog
+                <a class="navbar-brand" href="Project_Web">
+                    Blog
                 </a>
             </div>
 
