--- a/login.html
+++ b/login.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Laravel Blog</title>
+    <title>Blog</title>
 
     <!-- Styles -->
     <!-- Latest compiled and minified CSS -->
@@ -28,8 +28,8 @@
                 </button>
 
                 <!-- Branding Image -->
-                <a class="navbar-brand" href="">
-                    Laravel Blog
+                <a class="navbar-brand" href="/Project_Web">
+                     Blog
                 </a>
             </div>
 
@@ -40,8 +40,8 @@
                 <!-- Right Side Of Navbar -->
                 <ul class="nav navbar-nav navbar-right">
                     <!-- Authentication Links -->
-                    <li><a href="">Login</a></li>
-                    <li><a href="">Register</a></li>
+                    <li><a href="/Project_Web/login">Login</a></li>
+                    <li><a href="/Project_Web/register">Register</a></li>
                 </ul>
             </div>
         </div>
