--- a/admin/comments.html
+++ b/admin/comments.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Laravel Blog</title>
+    <title> Blog</title>
 
     <!-- Styles -->
     <!-- Latest compiled and minified CSS -->
@@ -29,8 +29,8 @@
                 </button>
 
                 <!-- Branding Image -->
-                <a class="navbar-brand" href="">
-                    Laravel Blog
+                <a class="navbar-brand" href="/Project_Web/">
+                     Blog
                 </a>
             </div>
 
@@ -38,12 +38,11 @@
                 <!-- Left Side Of Navbar -->
 
                 <ul class="nav navbar-nav">
-                    <li><a href="admin/posts">Posts</a></li>
-                    <li><a href="admin/categories">Categories</a></li>
-                    <li><a href="admin/comments">Comments</a></li>
-                    <li><a href="admin/tags">Tags</a></li>
-
-                    <li><a href="admin/users">Users</a></li>
+                    <li><a href="/Project_Web/admin/posts">Posts</a></li>
+                    <li><a href="/Project_Web/admin/categories">Categories</a></li>
+                    <li><a href="/Project_Web/admin/comments">Comments</a></li>
+                    <li><a href="/Project_Web/admin/tags">Tags</a></li>
+                    <li><a href="/Project_Web/admin/users">Users</a></li>
                 </ul>
 
                 <!-- Right Side Of Navbar -->
@@ -81,7 +80,7 @@
                         <h2>
                             Comments
 
-                            <a href="" class="btn btn-default pull-right">Create New</a>
+                            <a href="/Project_Web/admin/comments/create" class="btn btn-default pull-right">Create New</a>
                         </h2>
                     </div>
 
