--- a/admin/posts.html
+++ b/admin/posts.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Laravel Blog</title>
+    <title> Blog</title>
 
     <!-- Styles -->
     <!-- Latest compiled and minified CSS -->
@@ -29,8 +29,8 @@
                 </button>
 
                 <!-- Branding Image -->
-                <a class="navbar-brand" href="">
-                    Laravel Blog
+                       <a class="navbar-brand" href="/Project_Web/">
+                     Blog
                 </a>
             </div>
 
@@ -38,12 +38,11 @@
                 <!-- Left Side Of Navbar -->
 
                 <ul class="nav navbar-nav">
-                    <li><a href="admin/posts">Posts</a></li>
-                    <li><a href="admin/categories">Categories</a></li>
-                    <li><a href="admin/comments">Comments</a></li>
-                    <li><a href="admin/tags">Tags</a></li>
-
-                    <li><a href="admin/users">Users</a></li>
+                    <li><a href="/Project_Web/admin/posts">Posts</a></li>
+                    <li><a href="/Project_Web/admin/categories">Categories</a></li>
+                    <li><a href="/Project_Web/admin/comments">Comments</a></li>
+                    <li><a href="/Project_Web/admin/tags">Tags</a></li>
+                    <li><a href="/Project_Web/admin/users">Users</a></li>
                 </ul>
 
                 <!-- Right Side Of Navbar -->
@@ -81,7 +80,7 @@
                         <h2>
                             Posts
 
-                            <a href=/posts/create" class="btn btn-default pull-right">Create New</a>
+                            <a href=/Project_Web/admin/posts/create" class="btn btn-default pull-right">Create New</a>
                         </h2>
                     </div>
 
@@ -107,10 +106,10 @@
                                     <td></td>
                                     <td>No</td>
                                     <td>
-                                        <a href=/posts/1/publish" data-method="PUT" data-token="32Mxrb2s2QPyv3C1h4iYcbfZBT7PmU7Tfm9koxkk"
+                                        <a href="/Project_Web/admin/posts/1/publish" data-method="PUT" data-token="32Mxrb2s2QPyv3C1h4iYcbfZBT7PmU7Tfm9koxkk"
                                             data-confirm="Are you sure?" class="btn btn-xs btn-warning">Publish</a>
-                                        <a href=/posts/1" class="btn btn-xs btn-success">Show</a>
-                                        <a href=/posts/1/edit" class="btn btn-xs btn-info">Edit</a>
+                                        <a href="/Project_Web/admin/posts/1/show" class="btn btn-xs btn-success">Show</a>
+                                        <a href="/Project_Web/admin/posts/1/edit" class="btn btn-xs btn-info">Edit</a>
                                         <a href=/posts/1" data-method="DELETE" data-token="32Mxrb2s2QPyv3C1h4iYcbfZBT7PmU7Tfm9koxkk"
                                             data-confirm="Are you sure?" class="btn btn-xs btn-danger">Delete</a>
                                     </td>
