--- a/admin/tags.html
+++ b/admin/tags.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Laravel Blog</title>
+    <title> Blog</title>
 
     <!-- Styles -->
     <!-- Latest compiled and minified CSS -->
@@ -29,7 +29,7 @@
 
                 <!-- Branding Image -->
                 <a class="navbar-brand" href="">
-                    Laravel Blog
+                     Blog
                 </a>
             </div>
 
@@ -37,12 +37,12 @@
                 <!-- Left Side Of Navbar -->
 
                 <ul class="nav navbar-nav">
-                    <li><a href="admin/posts">Posts</a></li>
-                    <li><a href="admin/categories">Categories</a></li>
-                    <li><a href="admin/comments">Comments</a></li>
-                    <li><a href="admin/tags">Tags</a></li>
+                    <li><a href="/Project_Web/admin/posts">Posts</a></li>
+                    <li><a href="/Project_Web/admin/categories">Categories</a></li>
+                    <li><a href="/Project_Web/admin/comments">Comments</a></li>
+                    <li><a href="/Project_Web/admin/tags">Tags</a></li>
 
-                    <li><a href="admin/users">Users</a></li>
+                    <li><a href="/Project_Web/admin/users">Users</a></li>
                 </ul>
 
                 <!-- Right Side Of Navbar -->
@@ -80,7 +80,7 @@
                         <h2>
                             Tags
 
-                            <a href="" class="btn btn-default pull-right">Create New</a>
+                            <a href="/Project_Web/admin/tags/create" class="btn btn-default pull-right">Create New</a>
                         </h2>
                     </div>
 
@@ -96,7 +96,7 @@
                                 <tr>
                                     <td>sit</td>
                                     <td>
-                                        <a href="" class="btn btn-xs btn-info">Edit</a>
+                                        <a href="/Project_Web/admin/tags/edit" class="btn btn-xs btn-info">Edit</a>
                                         <a href="" data-method="DELETE" data-token="32Mxrb2s2QPyv3C1h4iYcbfZBT7PmU7Tfm9koxkk"
                                             data-confirm="Are you sure?" class="btn btn-xs btn-danger">Delete</a>
                                     </td>
