--- a/admin/users.html
+++ b/admin/users.html
@@ -29,8 +29,8 @@
                 </button>
 
                 <!-- Branding Image -->
-                <a class="navbar-brand" href="">
-                    Laravel Blog
+                <a class="navbar-brand" href="/Project_Web/">
+                     Blog
                 </a>
             </div>
 
@@ -38,12 +38,12 @@
                 <!-- Left Side Of Navbar -->
 
                 <ul class="nav navbar-nav">
-                    <li><a href="admin/posts">Posts</a></li>
-                    <li><a href="admin/categories">Categories</a></li>
-                    <li><a href="admin/comments">Comments</a></li>
-                    <li><a href="admin/tags">Tags</a></li>
+                    <li><a href="/Project_Web/admin/posts">Posts</a></li>
+                    <li><a href="/Project_Web/admin/categories">Categories</a></li>
+                    <li><a href="/Project_Web/admin/comments">Comments</a></li>
+                    <li><a href="/Project_Web/admin/tags">Tags</a></li>
 
-                    <li><a href="admin/users">Users</a></li>
+                    <li><a href="/Project_Web/admin/users">Users</a></li>
                 </ul>
 
                 <!-- Right Side Of Navbar -->
