--- a/admin/categories.html
+++ b/admin/categories.html
@@ -81,7 +81,7 @@
                         <h2>
                             Categories
 
-                            <a href="/Project_Web/admin/categories/create" class="btn btn-default pull-right">Create New</a>
+                            <a href="/Project_Web/admin/createCategory" class="btn btn-default pull-right">Create New</a>
                         </h2>
                     </div>
 
@@ -99,7 +99,7 @@
                                     <td>sedd</td>
                                     <td>1</td>
                                     <td>
-                                        <a href="categories/1/edit" class="btn btn-xs btn-info">Edit</a>
+                                        <a href=""/Project_Web/admin/editCategory" class="btn btn-xs btn-info">Edit</a>
                                         <a href="categories/1" data-method="DELETE" data-token="32Mxrb2s2QPyv3C1h4iYcbfZBT7PmU7Tfm9koxkk"
                                             data-confirm="Are you sure?" class="btn btn-xs btn-danger">Delete</a>
                                     </td>
