--- a/admin/tags.html
+++ b/admin/tags.html
@@ -96,7 +96,7 @@
                                 <tr>
                                     <td>sit</td>
                                     <td>
-                                        <a href="/Project_Web/admin/" class="btn btn-xs btn-info">Edit</a>
+                                        <a href="/Project_Web/admin/editTag" class="btn btn-xs btn-info">Edit</a>
                                         <a href="" data-method="DELETE" data-token="32Mxrb2s2QPyv3C1h4iYcbfZBT7PmU7Tfm9koxkk"
                                             data-confirm="Are you sure?" class="btn btn-xs btn-danger">Delete</a>
                                     </td>
