--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 </button>
 
                 <!-- Branding Image -->
-                <a class="navbar-brand" href="Project_Web">
+                <a class="navbar-brand" href="/Project_Web/">
                     Blog
                 </a>
             </div>
@@ -89,7 +89,7 @@
                             <span class="btn btn-sm btn-success">ipsum</span>
                             <span class="btn btn-sm btn-info">Comments <span class="badge"></span></span>
 
-                            <a href="" class="btn btn-sm btn-primary">See more</a>
+                            <a href="/Project_Web/post/" class="btn btn-sm btn-primary">See more</a>
                         </p>
                     </div>
                 </div>
@@ -116,7 +116,7 @@
                             <span class="btn btn-sm btn-success">unde</span>
                             <span class="btn btn-sm btn-info">Comments <span class="badge"></span></span>
 
-                            <a href="" class="btn btn-sm btn-primary">See more</a>
+                            <a href="/Project_Web/post/" class="btn btn-sm btn-primary">See more</a>
                         </p>
                     </div>
                 </div>
@@ -142,7 +142,7 @@
                             <span class="btn btn-sm btn-success">id</span>
                             <span class="btn btn-sm btn-info">Comments <span class="badge"></span></span>
 
-                            <a href="" class="btn btn-sm btn-primary">See more</a>
+                            <a href="/Project_Web/post/" class="btn btn-sm btn-primary">See more</a>
                         </p>
                     </div>
                 </div>
