--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                             <span class="btn btn-sm btn-success">ipsum</span>
                             <span class="btn btn-sm btn-info">Comments <span class="badge"></span></span>
 
-                            <a href="/Project_Web/post/" class="btn btn-sm btn-primary">See more</a>
+                            <a href="/post/" class="btn btn-sm btn-primary">See more</a>
                         </p>
                     </div>
                 </div>
@@ -116,7 +116,7 @@
                             <span class="btn btn-sm btn-success">unde</span>
                             <span class="btn btn-sm btn-info">Comments <span class="badge"></span></span>
 
-                            <a href="/Project_Web/post/" class="btn btn-sm btn-primary">See more</a>
+                            <a href="/post/" class="btn btn-sm btn-primary">See more</a>
                         </p>
                     </div>
                 </div>
