--- a/admin/showPost.html
+++ b/admin/showPost.html
@@ -96,7 +96,7 @@
                   Quo ut eius magni ut adipisci perspiciatis non maxime.
                   <small>by Prof. General Huel IV</small>
 
-                  <a href="/admin/posts" class="btn btn-default pull-right"
+                  <a href="/Project_Web/admin/posts" class="btn btn-default pull-right"
                     >Go Back</a
                   >
                 </h2>
